--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.5.0",
     "express": "^4.16.2",
     "style-loader": "^0.19.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-tel-input": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
