--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.5.0",
     "express": "^4.16.2",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "style-loader": "^0.19.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-tel-input": "^1.2.0"
+    "vue2-phone-input": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
