--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue2-phone-input": "^1.1.1",
+    "vue2-toast": "^1.3.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
